# yaawp

./: .gitignore  README.md  install.sh
daemon/: Makefile  go.mod  go.sum
daemon/cmd/yaawp-daemon/: main.go
daemon/internal/engine/: engine.go  events.go
daemon/internal/ipc/: protocol.go  server.go
daemon/internal/store/: db.go  paths.go
docs/: ARCHITECTURE.md  RISKS.md  ROADMAP.md
gui/: CMakeLists.txt  tr.cebi.yaawp.desktop  yaawp.notifyrc
gui/qml/: ChatListPage.qml  ConversationPage.qml  LoginPage.qml  Main.qml  SettingsPage.qml
gui/src/: chatfiltermodel.cpp  chatfiltermodel.h  chatlistmodel.cpp  chatlistmodel.h  controller.cpp  controller.h  ipcclient.cpp  ipcclient.h  main.cpp  messagemodel.cpp  messagemodel.h  notifier.cpp  notifier.h  settings.cpp  settings.h  tray.cpp  tray.h
ipc/: protocol.md
packaging/: PKGBUILD
packaging/systemd/: yaawp-daemon.service
